<resources>
    <string name="app_name">HiSelfies</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Selfie World</item>
        <item >Groupfie World</item>
        <item >Friends</item>
        <item >Find Friends</item>
        <item >Events</item>
        <item>Coupons</item>
        <item >Settings</item>
        <item>Logout</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@mipmap/home</item>
        <item>@mipmap/selfie</item>
        <item>@mipmap/groupfie</item>
        <item>@mipmap/friends</item>
        <item>@mipmap/findfriends</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>




    <string name="title_activity_sing_in">SingInActivity</string>
    <string name="signin">SIGN IN</string>
    <string name="user_name_hint">user name or email</string>
    <string name="pass_hint">password</string>
    <string name="no_account">Don\'t have an account!</string>
    <string name="sign_up_button_text">Sign Up Here</string>
    <string name="gplus_text">g+ Sign In with Google+</string>
    <string name="facebook_text">f Sign In with Facebook</string>
    <string name="dashes">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="or_dashes">- - - - - - - - - - - - - - - - - - or - - - - - - - - - - - - - - - - -</string>

    <!-- SignUpscreen Activity -->
    <string name="title_activity_sign_up">SIGN UP</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_add_hint">Email Address</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="sign_up_pass_hint">Password</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

    <!-- HomeScreen -->
    <string name="selfie_world">SELFIE WORLD</string>
    <string name="groupfie_world">GROUPFIE WORLD</string>
    <string name="friends">FRIENDS</string>
    <string name="awards">AWARDS</string>
    <string name="archive">ARCHIVE</string>
    <string name="points">POINTS</string>
    <string name="events">EVENTS</string>
    <string name="coupons">COUPONS</string>
    <string name="find_friends">FIND FRIENDS</string>
    <string name="title_activity_selfie_world">SelfieWorldActivity</string>

    <!-- SelfieWorldActivity -->
    <string name="selfieworld">Selfie World</string>
    <string name="groupfieworld">Groupfie World</string>
    <string name="Events">Events</string>
    <string name="action_profile">Profile</string>
    <string name="countdown">Count Down :</string>
    <string name="upload">Upload Photo</string>

    <string name="point">Points:</string>
    <string name="crownme">Crown me:</string>
    <string name="friend_name">Sailesh</string>
    <string name="addfriend">Add Friend</string>
    <string name="friend">Friends</string>
    <string name="searchfriends">Search friends ...</string>

    <string name="coupon">Coupons</string>
    <string name="credits">Credits</string>
    <string name="couponstext">100% wallet cash on first meal</string>
    <string name="free">free</string>
    <string name="writecomment">Write Comment</string>


    <string name="comments_name">Anupama</string>
    <string name="commentsText">The best way to use these icons on the web is with our icon web font. It\'s lightweight, easy to use, and hosted by Google Web Fonts. Learn how to use font-based icons in our</string>

    <string name="forgot_password">Forgot password</string>
    <string name="forgot_pass_text">Type your email account</string>
    <string name="forgot_mail">Enter email id</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="creditsearned">CREDITS EARNED</string>
    <string name="creditsspent">CREDITS SPENT</string>
    <string name="totalcredits">TOTAL CREDITS</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_selfie_comment">SelfieComment</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_coupons">Coupons</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>
