<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/facebook_color">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/forgot_password"
                android:id="@+id/forgotPass"
                android:layout_marginLeft="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot_pass_text"
        android:id="@+id/textView11"
        android:layout_marginLeft="20dp"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/forgot_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_for_edittext"
        android:hint="@string/forgot_mail"
        android:textColor="@color/facebook_color"
        android:textColorHint="@color/gray"
        android:focusableInTouchMode="true"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="20dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:layout_marginLeft="30dp"
            android:background="@color/facebook_color"
            android:onClick="onCancel" />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/submit"
            android:id="@+id/submitButton"
            android:layout_marginLeft="60dp"
            android:background="@color/facebook_color"
            android:onClick="onSubmit" />
    </LinearLayout>
</LinearLayout>
