<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/facebook_color"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/selfie_world"
                android:src="@mipmap/selfie"
                android:layout_marginBottom="20dp"

                android:onClick="gotoSelfieWorldActivity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/selfie_world"
                android:id="@+id/selfie_text"
                android:textColor="@color/cornflowerblue"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/groupfie_world"
                android:src="@mipmap/groupfie"
                android:layout_marginBottom="20dp"
                android:onClick="gotoGroupfieWorldActivity"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/groupfie_world"
                android:id="@+id/groupfie_text"
                android:textColor="@color/cornflowerblue"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/archive"
                android:src="@mipmap/user"
                android:layout_marginBottom="20dp"
                android:onClick="gotoCouponsActivity"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/coupons"
                android:id="@+id/coupons_text"
                android:textColor="@color/cornflowerblue"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/coupons"
                android:src="@mipmap/user"
                android:layout_marginBottom="20dp"
                android:onClick="gotoEventsActivity"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/events"
                android:id="@+id/events_text"
                android:textColor="@color/cornflowerblue"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/friends"
                android:src="@mipmap/friends"
                android:layout_marginBottom="20dp"
                android:onClick="gotoFriendsActivity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/friends"
                android:id="@+id/friends_text"
                android:textColor="@color/cornflowerblue"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/points"
                android:src="@mipmap/user"
                android:layout_marginBottom="20dp"
                android:onClick="gotoFindFriendsActivity"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/find_friends"
                android:id="@+id/find_friends_text"
                android:textColor="@color/cornflowerblue"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
