<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/creditsearned"
                android:id="@+id/textView12"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="400"
                android:id="@+id/creditsEarned"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/creditsspent"
                android:id="@+id/textView13"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="200"
                android:id="@+id/creditsSpent"
                android:layout_alignParentTop="false"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/totalcredits"
                android:id="@+id/textView14"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="200"
                android:id="@+id/totalCredits"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Close"
                android:id="@+id/creditsClose"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@color/facebook_color"
                android:onClick="closeCreditsDialog" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
